--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     androidTestImplementation 'androidx.test:core-ktx:1.4.0'
     implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
-
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
