--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "io.mockk:mockk-android:1.12.2"
+    testImplementation "io.mockk:mockk:1.12.2"
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
