--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation "io.mockk:mockk-android:1.12.2"
     testImplementation "io.mockk:mockk:1.12.2"
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0-alpha04'
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
